[gd_scene load_steps=2 format=3 uid="uid://f1x2y6m7n8p9q"]

[ext_resource type="Script" path="res://scripts/spawners/enemy_spawner.gd" id="1_spawner"]

[node name="EnemySpawner" type="Node2D"]
script = ExtResource("1_spawner")

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="SpawnPoints" type="Node2D" parent="."]

[node name="SpawnPoint1" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1200, 200)

[node name="SpawnPoint2" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1200, 400)

[node name="SpawnPoint3" type="Marker2D" parent="SpawnPoints"]
position = Vector2(1200, 600) 